--- a/Simple_2dcnn.ipynb
+++ b/Simple_2dcnn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Simple-2dcnn.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNb7+Ev0qIuif1a6+apWvHf",
+      "authorship_tag": "ABX9TyPaWazpPgObuGSERMrwfZOx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,18 +41,18 @@
         "    # Constructor of Simple_2dcnn\n",
         "    def __init__(self):\n",
         "        super().__init__()\n",
-        "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
-        "        self.pool = nn.MaxPool2d(2, 2)\n",
-        "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
-        "        self.fc1 = nn.Linear(16 * 5 * 5, 120)\n",
-        "        self.fc2 = nn.Linear(120, 84)\n",
-        "        self.fc3 = nn.Linear(84, 10)\n",
+        "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=6, kernel_size=5)\n",
+        "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
+        "        self.conv2 = nn.Conv2d(in_channels=6, out_channels=16, kernel_size=5)\n",
+        "        self.fc1 = nn.Linear(in_features=16*5*5, out_features=120, bias=True)\n",
+        "        self.fc2 = nn.Linear(in_features=120, out_features=84, bias=True)\n",
+        "        self.fc3 = nn.Linear(in_features=84, out_features=10)\n",
         "\n",
         "    # Will be automatically called when executing mycnn(x)\n",
         "    def forward(self, x):\n",
         "        x = self.pool(F.relu(self.conv1(x)))\n",
         "        x = self.pool(F.relu(self.conv2(x)))\n",
-        "        x = torch.flatten(x, 1) # flatten all dimensions except batch\n",
+        "        x = torch.flatten(x, 1) # flatten all dimensions except the batch dim\n",
         "        x = F.relu(self.fc1(x))\n",
         "        x = F.relu(self.fc2(x))\n",
         "        x = self.fc3(x)\n",
@@ -60,7 +60,7 @@
         "\n",
         "mycnn = Simple_2dcnn()    # Create an object of Simple_2dcnn"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     }
   ]
