--- a/Simple_2dcnn.ipynb
+++ b/Simple_2dcnn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Simple-2dcnn.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPaWazpPgObuGSERMrwfZOx",
+      "authorship_tag": "ABX9TyOFzfUcHAZATagyXQDdFmmx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
         "    def forward(self, x):\n",
         "        x = self.pool(F.relu(self.conv1(x)))\n",
         "        x = self.pool(F.relu(self.conv2(x)))\n",
-        "        x = torch.flatten(x, 1) # flatten all dimensions except the batch dim\n",
+        "        x = torch.flatten(input=x, start_dim=1, end_dim=-1) # flatten all dim except the batch dim\n",
         "        x = F.relu(self.fc1(x))\n",
         "        x = F.relu(self.fc2(x))\n",
         "        x = self.fc3(x)\n",
