--- a/RNN_SentimentAnalysis.ipynb
+++ b/RNN_SentimentAnalysis.ipynb
@@ -1114,16 +1114,12 @@
       "source": [
         "## Next Steps\n",
         "\n",
-        "In the next notebook, the improvements we will make are:\n",
-        "- packed padded sequences\n",
-        "- pre-trained word embeddings\n",
-        "- different RNN architecture\n",
-        "- bidirectional RNN\n",
-        "- multi-layer RNN\n",
-        "- regularization\n",
-        "- a different optimizer\n",
+        "Try the following:\n",
+        "1.   Increase the number of RNN layers \n",
+        "2.   Change the embedding dimension of your RNN\n",
+        "3.   Reduce the dimension of word embedding\n",
         "\n",
-        "This will allow us to achieve ~84% accuracy."
+        "Discuss your results and observations in your report."
       ]
     }
   ]
