--- a/LSTM_SentimentAnalysis.ipynb
+++ b/LSTM_SentimentAnalysis.ipynb
@@ -44,7 +44,7 @@
         "id": "lXapSRrg2-Bf"
       },
       "source": [
-        "This Colab is based on the Colab file in [link](https://github.com/bentrevett/pytorch-sentiment-analysis/blob/master/2%20-%20Upgraded%20Sentiment%20Analysis.ipynb). To reduce running time, we will use a reduced-size IMDB dataset."
+        "#**This Colab is based on the Colab file in [link](https://github.com/bentrevett/pytorch-sentiment-analysis/blob/master/2%20-%20Upgraded%20Sentiment%20Analysis.ipynb). To reduce running time, we will use a reduced-size IMDB dataset.**"
       ]
     },
     {
@@ -55,7 +55,7 @@
       "source": [
         "# 2 - Updated Sentiment Analysis\n",
         "\n",
-        "In the previous notebook, we got the fundamentals down for sentiment analysis. In this notebook, we'll actually get decent results.\n",
+        "We have learned the fundamentals of sentiment analysis in `RNN-SentimentAnalysis.ipynb`. In this notebook, we'll use advanced techniques and models to obtain better results.\n",
         "\n",
         "We will use:\n",
         "- packed padded sequences\n",
@@ -76,7 +76,7 @@
         "\n",
         "As before, we'll set the seed, define the `Fields` and get the train/valid/test splits.\n",
         "\n",
-        "We'll be using *packed padded sequences*, which will make the LSTM processes the non-padded elements of our sequence only. This will speed up computtion. For any padded element the `output` will be a zero tensor. To use packed padded sequences, we have to tell the LSTM how long the actual sequences are. We do this by setting `include_lengths = True` for our `TEXT` field. This will cause `batch.text` to now be a tuple with the first element being our sentence (a numericalized tensor that has been padded) and the second element being the actual lengths of our sentences."
+        "We'll be using *packed padded sequences*, which will make the LSTM processes the non-padded elements of our sequence only. This will speed up computtion. To use packed padded sequences, we have to tell the LSTM how long the actual sequences are. We do this by setting `include_lengths = True` in our `TEXT` field. This will cause `batch.text` to be a tuple with the first element being our sentence (a numericalized tensor that has been padded) and the second element being the actual lengths of our sentences."
       ]
     },
     {
@@ -326,7 +326,7 @@
       "source": [
         "As before, we create the iterators, placing the tensors on the GPU if one is available.\n",
         "\n",
-        "Another thing for packed padded sequences all of the tensors within a batch need to be sorted by their lengths. This is handled in the iterator by setting `sort_within_batch = True`."
+        "Another thing for packed padded sequences is that all of the tensors within a batch need to be sorted by their lengths. To instruct the iterator to perform sorting, we set `sort_within_batch = True`."
       ]
     },
     {
@@ -358,7 +358,7 @@
         "\n",
         "### Different RNN Architecture\n",
         "\n",
-        "We'll be using a different RNN architecture called a Long Short-Term Memory (LSTM). Why is an LSTM better than a standard RNN? Standard RNNs suffer from the [vanishing gradient problem](https://en.wikipedia.org/wiki/Vanishing_gradient_problem). LSTMs overcome this by having an extra recurrent state called a _cell_, $c$ - which can be thought of as the \"memory\" of the LSTM - and the use use multiple _gates_ which control the flow of information into and out of the memory. For more information, go [here](https://colah.github.io/posts/2015-08-Understanding-LSTMs/). We can simply think of the LSTM as a function of $x_t$, $h_t$ and $c_t$, instead of just $x_t$ and $h_t$.\n",
+        "We'll be using a different RNN architecture called a Long Short-Term Memory (LSTM). Why is an LSTM better than a standard RNN? Standard RNNs suffer from the [vanishing gradient problem](https://en.wikipedia.org/wiki/Vanishing_gradient_problem). LSTMs overcome this by having an extra recurrent state called a _cell_, which can be thought of as the \"memory\" of the LSTM. The LSTM uses multiple _gates_ which control the flow of information into and out of the memory. For more information, go [here](https://colah.github.io/posts/2015-08-Understanding-LSTMs/). We can simply think of the LSTM as a function of $x_t$, $h_t$ and $c_t$, instead of just $x_t$ and $h_t$.\n",
         "\n",
         "$$(h_t, c_t) = \\text{LSTM}(x_t, h_t, c_t)$$\n",
         "\n",
@@ -366,7 +366,7 @@
         "\n",
         "![](https://github.com/bentrevett/pytorch-sentiment-analysis/blob/master/assets/sentiment2.png?raw=1)\n",
         "\n",
-        "The initial cell state, $c_0$, like the initial hidden state is initialized to a tensor of all zeros. The sentiment prediction is still, however, only made using the final hidden state, not the final cell state, i.e. $\\hat{y}=f(h_T)$.\n",
+        "The initial cell state $c_0$, like the initial hidden state, is initialized to a tensor of all zeros. The sentiment prediction is still, however, only made using the final hidden state, not the final cell state, i.e. $\\hat{y}=f(h_T)$.\n",
         "\n",
         "### Bidirectional RNN\n",
         "\n",
@@ -390,25 +390,25 @@
         "\n",
         "### Regularization\n",
         "\n",
-        "Although we've added improvements to our model, each one adds additional parameters. Without going into overfitting into too much detail, the more parameters you have in in your model, the higher the probability that your model will overfit (memorize the training data, causing  a low training error but high validation/testing error, i.e. poor generalization to new, unseen examples). To combat this, we use regularization. More specifically, we use a method of regularization called *dropout*. Dropout works by randomly *dropping out* (setting to 0) neurons in a layer during a forward pass. The probability that each neuron is dropped out is set by a hyperparameter and each neuron with dropout applied is considered indepenently. One theory about why dropout works is that a model with parameters dropped out can be seen as a \"weaker\" (less parameters) model. The predictions from all these \"weaker\" models (one for each forward pass) get averaged together withinin the parameters of the model. Thus, your one model can be thought of as an ensemble of weaker models, none of which are over-parameterized and thus should not overfit.\n",
+        "Although we've added improvements to our model, each one adds additional parameters, which may cause overfitting. The more parameters you have in in your model, the higher the probability that your model will overfit (memorize the training data, causing  a low training error but high validation/testing error, i.e., poor generalization to new, unseen examples). To combat this, we use regularization. More specifically, we use a method of regularization called *dropout*. Dropout works by randomly *dropping out* some nodes, i.e., setting the output of some neurons to 0 during a forward pass. The probability that each neuron is dropped out is set by a hyperparameter, and each neuron is considered indepenently. One theory about why dropout works is that a model with parameters dropped out can be seen as a \"weaker\" (less parameters) model. The predictions from all of these \"weaker\" models (one for each forward pass) get averaged together within the parameters of the model. Thus, your model can be thought of as an ensemble of weaker models, none of which are over-parameterized and thus should not overfit.\n",
         "\n",
         "### Implementation Details\n",
         "\n",
         "Another addition to this model is that we are not going to learn the embedding for the `<pad>` token. This is because we want to explitictly tell our model that padding tokens are irrelevant to determining the sentiment of a sentence. This means the embedding for the pad token will remain at what it is initialized to (we initialize it to all zeros later). We do this by passing the index of our pad token as the `padding_idx` argument to the `nn.Embedding` layer.\n",
         "\n",
-        "To use an LSTM instead of the standard RNN, we use `nn.LSTM` instead of `nn.RNN`. Also, note that the LSTM returns the `output` and a tuple of the final `hidden` state and the final `cell` state, whereas the standard RNN only returned the `output` and final `hidden` state. \n",
+        "To use an LSTM instead of the standard RNN, we use `nn.LSTM` instead of `nn.RNN`. Also, note that the LSTM returns the `output` AND a tuple containing the final `hidden` state and the final `cell` state, whereas the standard RNN returned the `output` and final `hidden` state only. \n",
         "\n",
-        "As the final hidden state of our LSTM has both a forward and a backward component, which will be concatenated together, the size of the input to the `nn.Linear` layer is twice that of the hidden dimension size.\n",
+        "The final hidden state of our LSTM has both a forward and backward components. Because these components will be concatenated together, the size of the input to the `nn.Linear` layer is twice that of the hidden dimension.\n",
         "\n",
-        "Implementing bidirectionality and adding additional layers are done by passing values for the `num_layers` and `bidirectional` arguments for the RNN/LSTM. \n",
+        "Implementing bidirectionality and adding additional layers are done by passing values for the `num_layers` and `bidirectional` arguments to the LSTM. \n",
         "\n",
-        "Dropout is implemented by initializing an `nn.Dropout` layer (the argument is the probability of dropping out each neuron) and using it within the `forward` method after each layer we want to apply dropout to. **Note**: never use dropout on the input or output layers (`text` or `fc` in this case), you only ever want to use dropout on intermediate layers. The LSTM has a `dropout` argument which adds dropout on the connections between hidden states in one layer to hidden states in the next layer. \n",
+        "Dropout is implemented by initializing an `nn.Dropout` layer (the argument is the probability of dropping out each neuron) and using it within the `forward` method. The layer can be added after each layer we want to apply dropout. **Note**: never use dropout on the input or output layers (`text` or `fc` in this case), you only ever want to use dropout on intermediate layers. The LSTM has a `dropout` argument which adds dropout on the connections between hidden states in one layer to hidden states in the next layer. \n",
         "\n",
-        "As we are passing the lengths of our sentences to be able to use packed padded sequences, we have to add a second argument, `text_lengths`, to `forward`. \n",
+        "As we are passing the lengths of our sentences so that packed padded sequences can be used, we have to add a second argument, `text_lengths`, to `forward`. \n",
         "\n",
-        "Before we pass our embeddings to the RNN, we need to pack them, which we do with `nn.utils.rnn.packed_padded_sequence`. This will cause our RNN to only process the non-padded elements of our sequence. The RNN will then return `packed_output` (a packed sequence) as well as the `hidden` and `cell` states (both of which are tensors). Without packed padded sequences, `hidden` and `cell` are tensors from the last element in the sequence, which will most probably be a pad token, however when using packed padded sequences they are both from the last non-padded element in the sequence. Note that the `lengths` argument of `packed_padded_sequence` must be a CPU tensor so we explicitly make it one by using `.to('cpu')`. More information about `packed_padded_sequence` can be found here [link](https://stackoverflow.com/questions/51030782/why-do-we-pack-the-sequences-in-pytorch)\n",
+        "Before we pass our embeddings to the LSTM layer, we need to pack them. We do this using tbe `nn.utils.rnn.packed_padded_sequence`. This will cause our network to only process the non-padded elements of our sequence. The network will then return `packed_output` (a packed sequence) as well as the `hidden` and `cell` states (both of which are tensors). Without packed padded sequences, `hidden` and `cell` are tensors from the last element in the sequence, which will most probably be a pad token, however when using packed padded sequences, they are both from the last non-padded element in the sequence. Note that the `lengths` argument of `packed_padded_sequence` must be a CPU tensor. To achieve this, we use `.to('cpu')`. More information about `packed_padded_sequence` can be found here [link](https://stackoverflow.com/questions/51030782/why-do-we-pack-the-sequences-in-pytorch)\n",
         "\n",
-        "We then unpack the output sequence, with `nn.utils.rnn.pad_packed_sequence`, to transform it from a packed sequence to a tensor. The elements of `output` from padding tokens will be zero tensors (tensors where every element is zero). Usually, we only have to unpack output if we are going to use it later on in the model. Although we aren't in this case, we still unpack the sequence just to show how it is done.\n",
+        "We then unpack the output sequence, using `nn.utils.rnn.pad_packed_sequence`, to transform it from a packed sequence to a tensor. The elements of `output` from padding tokens will be zero tensors (tensors where every element is zero). Usually, we only have to unpack output if we are going to use it later. Although we aren't in this case, we still unpack the sequence just to show how it is done.\n",
         "\n",
         "The final hidden state, `hidden`, has a shape of _**[num layers * num directions, batch size, hid dim]**_. These are ordered: **[forward_layer_0, backward_layer_0, forward_layer_1, backward_layer 1, ..., forward_layer_n, backward_layer n]**. As we want the final (top) layer forward and backward hidden states, we get the top two hidden layers from the first dimension, `hidden[-2,:,:]` and `hidden[-1,:,:]`, and concatenate them together before passing them to the linear layer (after applying dropout). "
       ]
@@ -470,8 +470,6 @@
       },
       "source": [
         "Like before, we'll create an instance of our RNN class, with the new parameters and arguments for the number of layers, bidirectionality and dropout probability.\n",
-        "\n",
-        "To ensure the pre-trained vectors can be loaded into the model, the `EMBEDDING_DIM` must be equal to that of the pre-trained GloVe vectors loaded earlier.\n",
         "\n",
         "We get our pad token index from the vocabulary, getting the actual string representing the pad token from the field's `pad_token` attribute, which is `<pad>` by default."
       ]
@@ -901,7 +899,7 @@
         "\n",
         "We can now use our model to predict the sentiment of any sentence we give it. As it has been trained on movie reviews, the sentences provided should also be movie reviews.\n",
         "\n",
-        "When using a model for inference it should always be in evaluation mode. If this tutorial is followed step-by-step then it should already be in evaluation mode (from doing `evaluate` on the test set), however we explicitly set it to avoid any risk.\n",
+        "When using a model for inference it should always be in evaluation mode. If the above lab procedures are followed step-by-step, then the network should already be in evaluation mode (from doing `evaluate` on the test set), however we explicitly set it to avoid any risk.\n",
         "\n",
         "Our `predict_sentiment` function does a few things:\n",
         "- sets the model to evaluation mode\n",
