--- a/LSTM_SentimentAnalysis.ipynb
+++ b/LSTM_SentimentAnalysis.ipynb
@@ -86,20 +86,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K4gU0qNY3ha_",
-        "outputId": "10b3b01b-5975-4748-c9ae-d8197d801c15"
+        "outputId": "64e230cd-fb93-4e30-b6d4-7252f1738e63"
       },
       "source": [
         "# Mount Google Drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -111,14 +111,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D5bPMlHJ3pzN",
-        "outputId": "a1b06487-aebe-4e8e-ced0-220a4324be00"
+        "outputId": "10aa7c58-4c10-4383-ec69-c7d89ad514b1"
       },
       "source": [
         "# Create a working folder and cd to it.\n",
         "!mkdir -p /content/drive/MyDrive/Learning/EIE4122/lab2\n",
         "%cd /content/drive/MyDrive/Learning/EIE4122/lab2"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,13 +194,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e-t8CNiBNYIg",
-        "outputId": "7c12053c-9957-4bc0-a4aa-47303ed511ee"
+        "outputId": "38b8b96b-d9aa-4b04-eedb-761de53b3e7c"
       },
       "source": [
         "!echo \"Start decompression. It will take few minutes\"\n",
         "!tar zxf data.tgz --exclude=\"._*\""
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
         "                  include_lengths = True)\n",
         "LABEL = data.LabelField(dtype = torch.float)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -247,7 +247,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "04e8425f-5273-427c-b7fc-2ce8cac2f573"
+        "outputId": "30ae2f1b-7fbc-44c5-a943-7c0a7a46e9c0"
       },
       "source": [
         "# This step should be quick as PyTorch only need to know the structure of the data in the\n",
@@ -259,7 +259,7 @@
         "print(f'Number of training examples: {len(train_data)}')\n",
         "print(f'Number of testing examples: {len(test_data)}')"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +290,7 @@
         "import random\n",
         "train_data, valid_data = train_data.split(random_state = random.seed(SEED))"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -311,11 +311,11 @@
         "MAX_VOCAB_SIZE = 25_000\n",
         "TEXT.build_vocab(train_data, \n",
         "                 max_size = MAX_VOCAB_SIZE)\n",
-        "#                 vectors = \"glove.6B.100d\", \n",
+        "#                 vectors = \"glove.6B.100d\",          # Do not use complicated word-embedding to reduce download time\n",
         "#                 unk_init = torch.Tensor.normal_)\n",
         "LABEL.build_vocab(train_data)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -343,7 +343,7 @@
         "    sort_within_batch = True,\n",
         "    device = device)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -460,7 +460,7 @@
         "            \n",
         "        return self.fc(hidden)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -498,7 +498,7 @@
         "            DROPOUT, \n",
         "            PAD_IDX)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -519,7 +519,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8a42d502-8456-410d-f76f-7800fac0b5e1"
+        "outputId": "b64bb212-7ffd-4c2f-8bd8-3ac3f855176e"
       },
       "source": [
         "def count_parameters(model):\n",
@@ -527,7 +527,7 @@
         "\n",
         "print(f'The model has {count_parameters(model):,} trainable parameters')"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,11 +555,9 @@
         "id": "NZIDAI4R2PeJ"
       },
       "source": [
-        "As our `<unk>` and `<pad>` token aren't in the pre-trained vocabulary they have been initialized using `unk_init` (an $\\mathcal{N}(0,1)$ distribution) when building our vocab. It is preferable to initialize them both to all zeros to explicitly tell our model that, initially, they are irrelevant for determining sentiment. \n",
+        "As our `<unk>` and `<pad>` token are irrelevant to sentiment, it is preferable to initialize them to all zeros to indicate that they are irrelevant. We achieve this by manually setting their row in the embedding weights matrix to zeros. We get their row by finding the index of the tokens, which we have already done for the padding index.\n",
         "\n",
-        "We do this by manually setting their row in the embedding weights matrix to zeros. We get their row by finding the index of the tokens, which we have already done for the padding index.\n",
-        "\n",
-        "**Note**: like initializing the embeddings, this should be done on the `weight.data` and not the `weight`!"
+        "**Note**: like initializing the embeddings, this should be done on the `weight.data` and not the `weight`."
       ]
     },
     {
@@ -569,16 +567,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a0e71200-a56a-48b0-8989-aacba7e42600"
+        "outputId": "7a61fced-5ee8-4a73-bcf8-5b2d176c5a9e"
       },
       "source": [
         "UNK_IDX = TEXT.vocab.stoi[TEXT.unk_token]\n",
         "model.embedding.weight.data[UNK_IDX] = torch.zeros(EMBEDDING_DIM)\n",
         "model.embedding.weight.data[PAD_IDX] = torch.zeros(EMBEDDING_DIM)\n",
         "\n",
-        "print(model.embedding.weight.data)"
+        "print(model.embedding.weight.data)\n",
+        "print(model.embedding.weight.data.size())"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,11 +585,13 @@
           "text": [
             "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
             "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-            "        [ 0.7289, -0.7336,  1.5624,  ..., -0.5592, -0.4480, -0.6476],\n",
+            "        [ 0.7342, -0.7404,  1.5803,  ..., -0.5389, -0.4477, -0.6573],\n",
             "        ...,\n",
-            "        [ 0.0914,  1.5196,  0.4670,  ...,  0.6393, -0.0332,  0.0185],\n",
-            "        [-0.6290,  0.4650, -0.7165,  ..., -1.3171,  2.0381, -2.0497],\n",
-            "        [-1.1222, -0.0240, -1.0878,  ..., -0.4948, -0.3874,  0.0339]])\n"
+            "        [ 0.1024,  1.5010,  0.4745,  ...,  0.6285, -0.0363,  0.0109],\n",
+            "        [-0.6358,  0.4663, -0.7163,  ..., -1.3165,  2.0392, -2.0391],\n",
+            "        [-1.1723, -0.0281, -1.1084,  ..., -0.4719, -0.3601,  0.0384]],\n",
+            "       device='cuda:0')\n",
+            "torch.Size([25002, 100])\n"
           ]
         }
       ]
@@ -633,7 +634,7 @@
         "import torch.optim as optim\n",
         "optimizer = optim.Adam(model.parameters())"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -655,7 +656,7 @@
         "model = model.to(device)\n",
         "criterion = criterion.to(device)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -683,7 +684,7 @@
         "    acc = correct.sum() / len(correct)\n",
         "    return acc"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -724,7 +725,7 @@
         "        \n",
         "    return epoch_loss / len(iterator), epoch_acc / len(iterator)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -761,7 +762,7 @@
         "        \n",
         "    return epoch_loss / len(iterator), epoch_acc / len(iterator)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -787,7 +788,7 @@
         "    elapsed_secs = int(elapsed_time - (elapsed_mins * 60))\n",
         "    return elapsed_mins, elapsed_secs"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -806,7 +807,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "41a80002-aa9b-4e53-9626-2ad80b4c62d1"
+        "outputId": "41821c0c-2c4f-4df8-d316-952d95114603"
       },
       "source": [
         "N_EPOCHS = 5\n",
@@ -830,27 +831,27 @@
         "    print(f'\\tTrain Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}%')\n",
         "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. Acc: {valid_acc*100:.2f}%')"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch: 01 | Epoch Time: 0m 13s\n",
-            "\tTrain Loss: 0.693 | Train Acc: 51.84%\n",
-            "\t Val. Loss: 0.691 |  Val. Acc: 51.00%\n",
+            "Epoch: 01 | Epoch Time: 0m 12s\n",
+            "\tTrain Loss: 0.603 | Train Acc: 67.33%\n",
+            "\t Val. Loss: 0.644 |  Val. Acc: 62.05%\n",
             "Epoch: 02 | Epoch Time: 0m 12s\n",
-            "\tTrain Loss: 0.674 | Train Acc: 57.56%\n",
-            "\t Val. Loss: 0.690 |  Val. Acc: 55.02%\n",
+            "\tTrain Loss: 0.577 | Train Acc: 69.72%\n",
+            "\t Val. Loss: 0.688 |  Val. Acc: 66.07%\n",
             "Epoch: 03 | Epoch Time: 0m 12s\n",
-            "\tTrain Loss: 0.633 | Train Acc: 65.09%\n",
-            "\t Val. Loss: 0.622 |  Val. Acc: 66.18%\n",
+            "\tTrain Loss: 0.542 | Train Acc: 72.46%\n",
+            "\t Val. Loss: 0.698 |  Val. Acc: 63.73%\n",
             "Epoch: 04 | Epoch Time: 0m 12s\n",
-            "\tTrain Loss: 0.595 | Train Acc: 67.96%\n",
-            "\t Val. Loss: 0.648 |  Val. Acc: 64.73%\n",
+            "\tTrain Loss: 0.520 | Train Acc: 76.29%\n",
+            "\t Val. Loss: 0.626 |  Val. Acc: 67.30%\n",
             "Epoch: 05 | Epoch Time: 0m 12s\n",
-            "\tTrain Loss: 0.572 | Train Acc: 70.30%\n",
-            "\t Val. Loss: 0.712 |  Val. Acc: 61.05%\n"
+            "\tTrain Loss: 0.464 | Train Acc: 77.65%\n",
+            "\t Val. Loss: 0.702 |  Val. Acc: 66.29%\n"
           ]
         }
       ]
@@ -871,20 +872,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "70f03735-7b67-4615-fbe9-e6cfc5f8fbd5"
+        "outputId": "f71a6736-76d8-4c9b-965d-e053bfed6789"
       },
       "source": [
         "model.load_state_dict(torch.load('tut2-model.pt'))\n",
         "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
         "print(f'Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}%')"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test Loss: 0.650 | Test Acc: 62.13%\n"
+            "Test Loss: 0.679 | Test Acc: 66.09%\n"
           ]
         }
       ]
